Use margin instead of gap in post list to avoid browser incompability

--- a/src/components/blogHome/blogHome.module.scss
+++ b/src/components/blogHome/blogHome.module.scss
@@ -40,7 +40,6 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  gap: 16px;
 
   @include mobile-only {
     flex-direction: column;
@@ -58,6 +57,7 @@
   background: #FFF;
   transition: all ease-in .2s;
   cursor: pointer;
+  margin-bottom: 16px;
 
   &:hover {
     box-shadow: 0 0 40px rgba(0,0,0,.05);
